fix(button): link icon spacing and clickable

--- a/elements/pf-button/pf-button.css
+++ b/elements/pf-button/pf-button.css
@@ -10,15 +10,6 @@
     var(--pf-global--FontWeight--normal, 400));
   line-height: var(--pf-c-button--LineHeight,
     var(--pf-global--LineHeight--md, 1.5));
-  padding:
-    var(--pf-c-button--PaddingTop,
-      var(--pf-global--spacer--form-element, 0.375rem))
-    var(--pf-c-button--PaddingRight,
-      var(--pf-global--spacer--md, 1rem))
-    var(--pf-c-button--PaddingBottom,
-      var(--pf-global--spacer--form-element, 0.375rem))
-    var(--pf-c-button--PaddingLeft,
-      var(--pf-global--spacer--md, 1rem));
   display: inline-block;
   height: max-content;
   cursor: pointer;
@@ -51,9 +42,23 @@ pf-icon,
   vertical-align: var(--_button-icon-vertical-align);
 }
 
+#icon {
+  margin-inline-end: var(--pf-c-button__icon--m-start--MarginRight,
+      var(--pf-global--spacer--xs, 0.25rem));
+}
+
 #button {
-  display: contents;
+  display: inline-block;
   color: var(--_button-color);
+  padding:
+    var(--pf-c-button--PaddingTop,
+      var(--pf-global--spacer--form-element, 0.375rem))
+    var(--pf-c-button--PaddingRight,
+      var(--pf-global--spacer--md, 1rem))
+    var(--pf-c-button--PaddingBottom,
+      var(--pf-global--spacer--form-element, 0.375rem))
+    var(--pf-c-button--PaddingLeft,
+      var(--pf-global--spacer--md, 1rem));
   &::before,
   &::after {
     position: absolute;
@@ -72,11 +77,12 @@ pf-icon,
     border-color: var(--pf-c-button--after--BorderColor);
     border-radius: var(--pf-c-button--after--BorderRadius);
   }
-}
-
-#button .anchor {
-  color: inherit;
-  text-decoration: none;
+  &.anchor {
+    text-decoration: none;
+    &::after {
+      pointer-events: all;
+    }
+  }
 }
 
 #text {
@@ -278,7 +284,7 @@ pf-icon,
  *                            *
  ******************************/
 
-:host([loading]) {
+:host([loading]) #button {
   position: relative;
   display: flex;
   align-items: center;
